--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,8 +1,16 @@
 --- 
+tutorial-2.jpg: tutorial-2-0b3a1090afcd2453d1b22bb2ab525afb.jpg
+cover.jpg: cover-00bdb56aa34f5e52476f1ed5146a7839.jpg
+app-store_zh.png: app-store_zh-d5df7ed7190d99fafd0e88e8e47cb564.png
 jwplayer/player.swf: jwplayer/player-4be833d64a1763080fc9a8e8cb59174c.swf
-preview.jpg: preview-ad0275c20516aa4a617fbba7b30ba674.jpg
+tutorial-3.jpg: tutorial-3-70751e7e9af0b963900ed276a0f30a8b.jpg
+tutorial-1.jpg: tutorial-1-22058f18745eb66719f5c56f43d154ea.jpg
+tutorial-4.jpg: tutorial-4-c44d212885f0712ecd071967b691cdc5.jpg
+record.jpg: record-777f9906c06e700f4ab7c55a88836778.jpg
+preview.jpg: preview-0604a9bae7dfc39f2ad25dec4dcec606.jpg
 app-store.png: app-store-d5df7ed7190d99fafd0e88e8e47cb564.png
-application.css: application-a25e9105cc0abf117b71fd40fb55de15.css
+application.css: application-8e82e7011fbf379d0841bc91015ba643.css
 favicon.ico: favicon-a7a2665c0c2f9a521519a95be510321b.ico
 logo.png: logo-daee41c04cdfa324ce962567d29c8ee0.png
 application.js: application-bfdb4b748083511ec022c1ba1b7ed2e6.js
+player.jpg: player-afeedc8908611382b6212d6bc16b4b81.jpg
