--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,16 +1,24 @@
 --- 
 tutorial-2.jpg: tutorial-2-0b3a1090afcd2453d1b22bb2ab525afb.jpg
+alipay_logo.gif: alipay_logo-ec0540df294ee49d6333a03e9633324d.gif
+preview_cn.jpg: preview_cn-695cda73eea42e8b62b2828f5118c583.jpg
 cover.jpg: cover-00bdb56aa34f5e52476f1ed5146a7839.jpg
 app-store_zh.png: app-store_zh-d5df7ed7190d99fafd0e88e8e47cb564.png
 jwplayer/player.swf: jwplayer/player-4be833d64a1763080fc9a8e8cb59174c.swf
+tutorial-4_cn.jpg: tutorial-4_cn-2cce690fcdcede3d7e5f281c50b46b59.jpg
 tutorial-3.jpg: tutorial-3-70751e7e9af0b963900ed276a0f30a8b.jpg
 tutorial-1.jpg: tutorial-1-22058f18745eb66719f5c56f43d154ea.jpg
 tutorial-4.jpg: tutorial-4-c44d212885f0712ecd071967b691cdc5.jpg
 record.jpg: record-777f9906c06e700f4ab7c55a88836778.jpg
+alipay_button.png: alipay_button-0a2b417194b6ff1592d045ddc49b42ba.png
+tutorial-3_cn.jpg: tutorial-3_cn-898574dde4ff1cd9b9e6100268284110.jpg
+tutorial-1_cn.jpg: tutorial-1_cn-5f3baaf05794508cf52ca4cf26d56203.jpg
 preview.jpg: preview-0604a9bae7dfc39f2ad25dec4dcec606.jpg
 app-store.png: app-store-d5df7ed7190d99fafd0e88e8e47cb564.png
-application.css: application-8e82e7011fbf379d0841bc91015ba643.css
+application.css: application-bdcbdb7f9431b46f9f2d6b4b1921b5ca.css
 favicon.ico: favicon-a7a2665c0c2f9a521519a95be510321b.ico
+tutorial-2_cn.jpg: tutorial-2_cn-03e5158cf49e4dc1f0ad86d35eae64db.jpg
+player_cn.jpg: player_cn-e07046faecda72c83c132def76564ef8.jpg
 logo.png: logo-daee41c04cdfa324ce962567d29c8ee0.png
-application.js: application-bfdb4b748083511ec022c1ba1b7ed2e6.js
+application.js: application-6af5e1b6b47d4e4e66db8b025afa0173.js
 player.jpg: player-afeedc8908611382b6212d6bc16b4b81.jpg
